# dumb-mcp-env

agent-environment/: Dockerfile  Makefile  pyproject.toml
agent-environment/src/agent_environment/: main.py  mcp_client.py
modal-client/: .env  .gitignore  main.py  pyproject.toml
