[project]
name = "agent-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.8.0",
    "mcp[cli]>=1.9.3",
    "uvicorn>=0.34.3",
]

[project.scripts]
agent-environment = "agent_environment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
